tests/syntactic/range_max_less_than_min/range_max_less_than_min.err
Error: Maximum range value must be larger than or equal to minimum in file range_max_less_than_min.dl at line 7
.type ran: 10..6
---------------^-
1 errors generated, evaluation aborted
